--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 </head>
 <body>
 	<p> Brasil </p>
-	<h6> O Brasil, um vasto país sul-americano, estende-se da Bacia Amazônica, no norte, até os vinhedos e as gigantescas Cataratas do Iguaçu, no sul. O Rio de Janeiro, simbolizado pela sua estátua de 38 metros de altura do Cristo Redentor, situada no topo do Corcovado, é famoso pelas movimentadas praias de Copacabana e Ipanema, bem como pelo imenso e animado Carnaval, com desfiles de carros alegóricos, fantasias extravagantes e samba. </h6>
+	<h6> O Brasil, um vasto país sul-americano, estende-se da Bacia Amazônica, no norte,
+		 até os vinhedos e as gigantescas Cataratas do Iguaçu, no sul. O Rio de Janeiro, 
+		 simbolizado pela sua estátua de 38 metros de altura do Cristo Redentor, situada 
+		 no topo do Corcovado, é famoso pelas movimentadas praias de Copacabana e Ipanema, 
+		 bem como pelo imenso e animado Carnaval, com desfiles de carros alegóricos, fantasias 
+		 extravagantes e samba. </h6>
+
+	<p> Argentina </p>
+	<h6> A Argentina é um país da América do Sul com uma área extensa que abrange montanhas dos Andes, 
+		lagos glaciais e pradarias nos Pampas, ocupadas tradicionalmente por seu famoso gado. O país é 
+		conhecido também por sua dança e sua música, o tango. A capital cosmopolita, Buenos Aires, tem 
+		como centro a Praça de Maio, cercada por edifícios imponentes do século XIX, como a Casa Rosada, 
+		o emblemático palácio presidencial. </h6>
 </body>
 </html>
